--- a/.github/workflows/conditional-steps.yml
+++ b/.github/workflows/conditional-steps.yml
@@ -14,7 +14,7 @@ jobs:
           exit 0 # Sucessfull
 
       - name: "This Step Will Always Execute"
-        if: ${{ succesfull() }} # Implicit
+        if: ${{ success() }} # Implicit
         run: |
           echo "This will run because previous step exited with 0"
 
