--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:  # This event triggers the workflow manually
 
 jobs:
-  say_hello_job:
+  say-hello-job:
     runs-on: ubuntu-latest  # The runner environment (Ubuntu in this case)
 
     steps:
