adjusting job name

--- a/.github/workflows/passing-data-between-steps.yml
+++ b/.github/workflows/passing-data-between-steps.yml
@@ -6,7 +6,7 @@ on:
 jobs:
     unique_Job:
         runs-on: "ubuntu-latest"
-        name: my_first_job
+        name: "Unique Job"
         steps:
             - name: "Setting Name Variable"
               id: "azul"
