adding checkout repository step

--- a/.github/workflows/passing-file.yml
+++ b/.github/workflows/passing-file.yml
@@ -7,6 +7,9 @@ jobs:
     download-artifact-job:
         runs-on: "ubuntu-latest"
         steps:
+            - name: "Checkout Source Code"
+              uses: actions/checkout@v4
+
             - name: "Donwload Python"
               uses: actions/setup-python@v5
               with:
