--- a/.github/workflows/passing-file.yml
+++ b/.github/workflows/passing-file.yml
@@ -4,7 +4,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    download-artifact-job:
+    upload-artifact-job:
         runs-on: "ubuntu-latest"
         steps:
             - name: "Checkout Source Code"
@@ -31,9 +31,9 @@ jobs:
                 name: coverage
                 path: ${{github.workspace}}/backend/.coverage
 
-    upload-artifact-job:
+    download-artifact-job:
         runs-on: "ubuntu-latest"
-        needs: ["download-artifact-job"]
+        needs: ["upload-artifact-job"]
         steps:
             - name: "Download Artifact"
               uses: actions/download-artifact@v4
