--- a/.github/workflows/passing-file.yml
+++ b/.github/workflows/passing-file.yml
@@ -31,15 +31,14 @@ jobs:
                 ls -la backend/.coverage
                 head -n 5 backend/.coverage
 
-                mkdir -p temp_artifacts
-                cp backend/.coverage temp_artifacts/coverage.sqlite
-                ls -la temp_artifacts/coverage.sqlite
+                cp backend/.coverage backend/coverage.sqlite
+                ls -la backend/coverage.sqlite
 
             - name: "Upload Artifact"
               uses: actions/upload-artifact@v4
               with:
                 name: coverage
-                path: temp_artifacts/coverage.sqlite
+                path: ${{github.workspace}}/backend/coverage.sqlite
 
     download-artifact-job:
         runs-on: "ubuntu-latest"
