--- a/backend/tox.ini
+++ b/backend/tox.ini
@@ -45,6 +45,7 @@ deps =
 description = Check code against coding style standards
 
 [testenv:unit]
+usedevelop = true
 commands =
     coverage run --source={[vars]src_path} \
         -m pytest -vv --tb native {posargs}
