adjusting " to ' inside string

--- a/.github/workflows/secrets-and-variables-acessing.yml
+++ b/.github/workflows/secrets-and-variables-acessing.yml
@@ -65,7 +65,7 @@ jobs:
         echo "Variable from this step ${CONFIG_VARIABLE2} environment"
         echo "Local step variable ${ANOTHER_VARIABLE}"
         echo "Secret print ${{ secrets.API_KEY }}"
-        echo "Step"s secret variable ${SECRET_API_KEY}"
+        echo "Step's secret variable ${SECRET_API_KEY}"
       env:
         SECRET_API_KEY: ${{ secrets.API_KEY }}
         CONFIG_VARIABLE2: ${{ env.DEPLOYMENT_ENV }}  # Use a step-level environment variable
